#ifndef STRATEGYDARK_H
#define STRATEGYDARK_H

#include "StrategyTheme.h"

class StrategyDark : public StrategyTheme{
    int getTheme(int brightness) override;
};

//STRATEGYDARK_H
#endif