#ifndef STRATEGYTHEME_H
#define STRATEGYTHEME_H

class StrategyTheme
{
public:
    virtual int getTheme(int brightness) = 0;
};

//STRATEGYTHEME_H
#endif